--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <dependency>
       <groupId>de.cosmocode</groupId>
       <artifactId>cosmocode-rendering</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>[1.0,2)</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
