--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <name>Palava Rendering</name>
   <version>1.0-SNAPSHOT</version>
   <scm>
-    <developerConnection>https://palava.svn.cosmocode.de/palava-rendering/trunk</developerConnection>
+    <developerConnection>scm:svn:https://palava.svn.cosmocode.de/palava-rendering/trunk</developerConnection>
   </scm>
   <dependencies>
     <dependency>
