--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
   <groupId>de.cosmocode.palava</groupId>
   <artifactId>palava-rendering</artifactId>
   <name>Palava Rendering</name>
-  <version>1.0.0</version>
+  <version>1.1-SNAPSHOT</version>
   <scm>
-    <developerConnection>scm:svn:https://palava.svn.cosmocode.de/palava-rendering/tags/1.0.0</developerConnection>
+    <developerConnection>scm:svn:https://palava.svn.cosmocode.de/palava-rendering/trunk</developerConnection>
   </scm>
   <dependencies>
     <dependency>
