--- a/pom.xml
+++ b/pom.xml
@@ -1,28 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>palava-parent</artifactId>
-    <groupId>de.cosmocode.palava</groupId>
-    <version>2.3.0</version>
-  </parent>
-  <groupId>de.cosmocode.palava</groupId>
-  <artifactId>palava-rendering</artifactId>
-  <name>Palava Rendering</name>
-  <version>1.1-SNAPSHOT</version>
-  <scm>
-    <developerConnection>scm:svn:https://palava.svn.cosmocode.de/palava-rendering/trunk</developerConnection>
-  </scm>
-  <dependencies>
-    <dependency>
-      <groupId>de.cosmocode</groupId>
-      <artifactId>cosmocode-rendering</artifactId>
-      <version>[1.0,2)</version>
-      <type>jar</type>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.inject</groupId>
-      <artifactId>guice</artifactId>
-    </dependency>
-  </dependencies>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>palava-parent</artifactId>
+		<groupId>de.cosmocode.palava</groupId>
+		<version>2.3.0</version>
+	</parent>
+	<groupId>de.cosmocode.palava</groupId>
+	<artifactId>palava-rendering</artifactId>
+	<name>Palava Rendering</name>
+	<version>1.1-SNAPSHOT</version>
+	<scm>
+		<developerConnection>scm:svn:https://palava.svn.cosmocode.de/palava-rendering/trunk</developerConnection>
+	</scm>
+	<repositories>
+		<repository>
+			<id>cosmocode-public</id>
+			<name>CosmoCode Public Maven Repository</name>
+			<url>http://mvn.cosmocode.de/</url>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>de.cosmocode</groupId>
+			<artifactId>cosmocode-rendering</artifactId>
+			<version>[1.0,2)</version>
+			<type>jar</type>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.inject</groupId>
+			<artifactId>guice</artifactId>
+		</dependency>
+	</dependencies>
 </project>
