--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<name>Palava Rendering</name>
 	<version>1.1-SNAPSHOT</version>
 	<scm>
-		<developerConnection>scm:svn:https://palava.svn.cosmocode.de/palava-rendering/trunk</developerConnection>
+		<developerConnection>scm:git:git@github.com:palava/${project.artifactId}.git</developerConnection>
 	</scm>
 	<repositories>
 		<repository>
